--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
           <p>Upload a picture for seam carving</p>
           <input type="file" id="input">
         </div>
-        <div class="col s12 m12 l9" id="canvas-div">
-        </div>
+        <div class="col s12 m12 l9" id="canvas-original"></div>
+      </div>
+      <div class="row">
+        <div class="col s12 m12 l6" id="canvas-resized"></div>
+        <div class="col s12 m12 l6" id="canvas-energy"></div>
+      </div>
+      <div class="row">
+        <div class="col s12 m12 l6" id="canvas-paths"></div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    <script src="js/Pixel.js"></script>
+    <script src="js/Imagegraph.js"></script>
     <script src="js/fileselect.js"></script>
     <!--script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script-->
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script-->
