--- a/index.html
+++ b/index.html
@@ -21,14 +21,34 @@
           <p>Upload a picture for seam carving</p>
           <input type="file" id="input">
         </div>
-        <div class="col s12 m12 l9" id="canvas-original"></div>
+        <div class="col s12 m12 l9">
+          <figure>
+            <div  id="canvas-original"></div
+            <figcaption>Original picture</figcaption>
+          </figure>
+        </div>
       </div>
       <div class="row">
-        <div class="col s12 m12 l6" id="canvas-resized"></div>
-        <div class="col s12 m12 l6" id="canvas-energy"></div>
+        <div class="col s12 m12 l9">
+          <figure>
+            <div  id="canvas-resized"></div
+            <figcaption>Resized picture</figcaption>
+          </figure>
+        </div>
+        <div class="col s12 m12 l9">
+          <figure>
+            <div  id="canvas-energy"></div
+            <figcaption>Energy picture</figcaption>
+          </figure>
+        </div>
       </div>
       <div class="row">
-        <div class="col s12 m12 l6" id="canvas-paths"></div>
+        <div class="col s12 m12 l9">
+          <figure>
+            <div  id="canvas-paths"></div
+            <figcaption>Seams that are deleted picture</figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
