--- a/index.html
+++ b/index.html
@@ -17,32 +17,39 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s12 m12 l3">
+        <div class="col s6 m6 l6">
           <p>Upload a picture for seam carving</p>
           <input type="file" id="input">
         </div>
+        <div class="col s3 m3 l3">
+          <p>Reduce the picture width (in pixels): </p>
+          <input type="number" id="numberVerticalSeams">
+        </div>
+        <div class="col s3 m3 l3">
+          <button name="Start" id="start-resizing">Start resizing</button>
+        </div>
+      </div>
+      <div class="row">
         <div class="col s12 m12 l9">
           <figure>
             <div  id="canvas-original"></div
             <figcaption>Original picture</figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
         <div class="col s12 m12 l9">
           <figure>
             <div  id="canvas-resized"></div
             <figcaption>Resized picture</figcaption>
           </figure>
         </div>
+      </div>
+      <div class="row">
         <div class="col s12 m12 l9">
           <figure>
             <div  id="canvas-energy"></div
             <figcaption>Energy picture</figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
         <div class="col s12 m12 l9">
           <figure>
             <div  id="canvas-paths"></div
