--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12 m12 l9">
+          <figure>
+            <div  id="canvas-energy-paths"></div
+            <figcaption>Energy Paths picture</figcaption>
+          </figure>
+        </div>
+        <div class="col s12 m12 l9">
+        </div>
+      </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script src="js/Pixel.js"></script>
     <script src="js/Imagegraph.js"></script>
