refactor: extract imagehandler class into own file

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <script src="js/Pixel.js"></script>
-    <script src="js/Imagegraph.js"></script>
+    <script src="js/imagehandler.js"></script>
+    <script src="js/pixel.js"></script>
+    <script src="js/imagegraph.js"></script>
     <script src="js/fileselect.js"></script>
     <!--script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script-->
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script-->
