fix: Fix missing parantheses and delete space

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class="row">
         <div class="col s12 m12 l9">
           <figure>
-            <div  id="canvas-original"></div
+            <div id="canvas-original"></div>
             <figcaption>Original picture</figcaption>
           </figure>
         </div>
         <div class="col s12 m12 l9">
           <figure>
-            <div  id="canvas-resized"></div
+            <div id="canvas-resized"></div>
             <figcaption>Resized picture</figcaption>
           </figure>
         </div>
@@ -46,13 +46,13 @@
       <div class="row">
         <div class="col s12 m12 l9">
           <figure>
-            <div  id="canvas-energy"></div
+            <div id="canvas-energy"></div>
             <figcaption>Energy picture</figcaption>
           </figure>
         </div>
         <div class="col s12 m12 l9">
           <figure>
-            <div  id="canvas-paths"></div
+            <div  id="canvas-paths"></div>
             <figcaption>Seams that are deleted picture</figcaption>
           </figure>
         </div>
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col s12 m12 l9">
           <figure>
-            <div  id="canvas-energy-paths"></div
+            <div id="canvas-energy-paths"></div>
             <figcaption>Energy Paths picture</figcaption>
           </figure>
         </div>
