--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col s6 m6 l6">
           <p>Upload a picture for seam carving</p>
-          <input type="file" id="input">
+          <input data-bind="event: {change: function() {handleFile($element.files[0])}}" type="file">
         </div>
         <div class="col s3 m3 l3">
           <p>Reduce the picture width (in pixels): </p>
@@ -31,49 +31,24 @@
       </div>
       <div class="row">
         <div class="col s12 m12 l9">
-          <figure>
-            <div id="canvas-original"></div>
-            <figcaption>Original picture</figcaption>
+          <figure data-bind="foreach: images">
+            <canvas data-bind="canvas: loadedImage, attr: {width: imageWidth, height: imageHeight}"></canvas>
+            <figcaption data-bind="text: caption"></figcaption>
           </figure>
-        </div>
-        <div class="col s12 m12 l9">
-          <figure>
-            <div id="canvas-resized"></div>
-            <figcaption>Resized picture</figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12 m12 l9">
-          <figure>
-            <div id="canvas-energy"></div>
-            <figcaption>Energy picture</figcaption>
-          </figure>
-        </div>
-        <div class="col s12 m12 l9">
-          <figure>
-            <div  id="canvas-paths"></div>
-            <figcaption>Seams that are deleted picture</figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12 m12 l9">
-          <figure>
-            <div id="canvas-energy-paths"></div>
-            <figcaption>Energy Paths picture</figcaption>
-          </figure>
-        </div>
-        <div class="col s12 m12 l9">
+
         </div>
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <script src="js/imagehandler.js"></script>
+    <!--script src="js/imagehandler.js"></script>
     <script src="js/pixel.js"></script>
     <script src="js/imagegraph.js"></script>
-    <script src="js/fileselect.js"></script>
+    <script src="js/fileselect.js"></script-->
+
+    <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/model.js"></script>
+    <script src="js/viewmodel.js"></script>
     <!--script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script-->
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script-->
   </body>
