--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
       </div>
       <div class="row">
         <div class="col s12 m12 l9">
-          <figure data-bind="foreach: images">
-            <canvas data-bind="canvas: loadedImage, attr: {width: imageWidth, height: imageHeight}"></canvas>
+          <figure data-bind="foreach: canvases">
+            <canvas data-bind="canvas: imageLoaded, attr: {width: imageWidth, height: imageHeight}"></canvas>
             <figcaption data-bind="text: caption"></figcaption>
           </figure>
-
         </div>
       </div>
     </div>
