--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col s12 m12 l9">
           <figure data-bind="foreach: canvases">
-            <canvas data-bind="canvas: imageLoaded, attr: {width: imageWidth, height: imageHeight}"></canvas>
+            <canvas data-bind="canvas: imageLoaded, attr: {width: canvasWidth, height: canvasHeight}"></canvas>
             <figcaption data-bind="text: caption"></figcaption>
           </figure>
         </div>
