refactor: Incorporate code with Knockout

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
         <div class="col s3 m3 l3">
           <p>Reduce the picture width (in pixels): </p>
-          <input type="number" id="numberVerticalSeams">
+          <input data-bind="value: verticalNumberSeams" type="number">
         </div>
         <div class="col s3 m3 l3">
-          <button name="Start" id="start-resizing">Start resizing</button>
+          <button data-bind="click: startResizing" name="Start">Start resizing</button>
         </div>
       </div>
       <div class="row">
