feat: Add seam detection (up to 1 seam)

--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <!--script src="js/pixel.js"></script>
+    <script src="js/pixel.js"></script>
     <script src="js/imagegraph.js"></script>
-    <script src="js/fileselect.js"></script-->
-
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/model.js"></script>
     <script src="js/viewmodel.js"></script>
