add: Diagonal and Horizontal resizing

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div class="col s3 m3 l3">
           <p>Reduce the picture width (in pixels): </p>
           <input data-bind="value: numberVerticalSeams" type="number">
+          <p>Reduce the picture height (in pixels): </p>
+          <input data-bind="value: numberHorizontalSeams" type="number">
         </div>
         <div class="col s3 m3 l3">
           <button data-bind="click: startResizing" name="Start">Start resizing</button>
