--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         </div>
       </div>
       <div class="row">
+        <div class="col s3 m3 l3">
+          <p>Reduce the picture width (in pixels): <span data-bind="text: numberVerticalSeams"></span></p>
+          <p>Reduce the picture height (in pixels): <span data-bind="text: numberHorizontalSeams"></span></p>
+        </div>
+        <div class="col s12 m12 l9">
+          <figure data-bind="foreach: resizeCanvases">
+            <canvas data-bind="canvas: imageLoaded, attr: {width: canvasWidth, height: canvasHeight}, event: {mousemove: enablePulling, mousedown: getResize, mouseup: resizeImage}"></canvas>
+            <figcaption data-bind="text: caption"></figcaption>
+          </figure>
         <div class="col s12 m12 l9">
           <figure data-bind="foreach: canvases">
             <canvas data-bind="canvas: imageLoaded, attr: {width: canvasWidth, height: canvasHeight}"></canvas>
@@ -42,12 +51,13 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/helperfunctions.js"></script>
     <script src="js/pixel.js"></script>
     <script src="js/imagegraph.js"></script>
     <script src="js/seamcarver.js"></script>
-    <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/model.js"></script>
+    <script src="js/canvasimage.js"></script>
     <script src="js/viewmodel.js"></script>
     <!--script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script-->
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script-->
