--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <div class="col s3 m3 l3">
           <button data-bind="click: startResizing" name="Start">Start resizing</button>
         </div>
+        <div data-bind="visible: progressVisible" class="col s3 m3 l3">
+          <progress data-bind="attr:{value: progress, max: maxProgress}"></progress>
+          <progress value="70" max="100"></progress>
+          <p>Approximate time needed to carve image: <span data-bind="text: timeLeft"></p>
+        </div>
       </div>
       <div class="row">
         <div class="col s3 m3 l3">
@@ -51,7 +56,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/lib/knockout-3.4.1.js"></script>
     <script src="js/helperfunctions.js"></script>
     <script src="js/pixel.js"></script>
     <script src="js/imagegraph.js"></script>
