fix: Update page to inform user that its broken

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
       <div class="section">
         <h4>Seam Carving - Content aware image resizing</h4>
+        <h5 class="warning">Note: This application is currently broken. It works sometimes for very small images (up to 150x150 px).</h5>
       </div>
       <div class="row">
         <ul class="collapsible" data-collapsible="accordion">
